# LIPS

./: .buildinfo  .gitignore  .readthedocs.yml  0_GenerateData.ipynb  1_EvaluateBaseline.ipynb  2_TrainAnAugmentedSimulator.ipynb  3_EvaluateBenchmark2.ipynb  4_EvaluateBenchmark3.ipynb  AUTHORS.txt  Benchmark1.ipynb  Dockerfile_conda  Dockerfile_conda_light  HyperParameterTuning.ipynb  LICENSE  MANIFEST.in  Notebook_Benchmark1.ipynb  README.md  draft_notebook.ipynb  draft_script.py  genindex.html  help.html  index.html  license.html  lips.augmented_simulators.html  lips.benchmark.html  lips.config.html  lips.dataset.html  lips.evaluation.html  lips.html  lips.logger.html  lips.metrics.html  lips.metrics.power_grid.html  lips.neurips_benchmark.html  lips.physical_simulator.html  modules.html  objects.inv  py-modindex.html  quickstart.html  requirements.txt  requirements_docker.txt  (+6 more)
.circleci/: config.yml
_modules/: index.html
_sources/: lips.benchmark.rst.txt  lips.config.rst.txt  lips.evaluation.rst.txt  lips.logger.rst.txt  lips.metrics.power_grid.rst.txt  lips.metrics.rst.txt  lips.neurips_benchmark.rst.txt  lips.physical_simulator.rst.txt  lips.rst.txt  quickstart.rst.txt
codabench/: README.md  build_docker.sh  codabench.html  code_submission  installation_codabench_worker.md  make_all.sh  make_bundle.sh  make_submission.sh  publish_docker.sh
getting_started/: 00_DesignBenchmarks.ipynb  01_GenerateData.ipynb  02_EvaluateBaseline.ipynb  03_TrainAnAugmentedSimulator.ipynb  04_Complete_example.ipynb  04_HyperParameterTuning.ipynb  05-Complete_example.ipynb  (+9 more)
(+1998 files in other folders)
